--- a/SkillsTrackerAPI/SkillsTrackerAPI.Tests/SkillsTrackerAPI.Tests.csproj
+++ b/SkillsTrackerAPI/SkillsTrackerAPI.Tests/SkillsTrackerAPI.Tests.csproj
@@ -140,7 +140,9 @@
       <Name>SkillTrackerEntityLayer</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
