--- a/SkillsTrackerAPI/SkillsTrackerAPI.Tests/packages.config
+++ b/SkillsTrackerAPI/SkillsTrackerAPI.Tests/packages.config
@@ -19,5 +19,6 @@
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.3" targetFramework="net46" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.7.0" targetFramework="net46" />
   <package id="NUnit.Runners" version="3.8.0" targetFramework="net46" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
