--- a/SkillTrackerUI/package.json
+++ b/SkillTrackerUI/package.json
@@ -50,6 +50,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "webpack-subresource-integrity": "^1.1.0-rc.4"
   }
 }
