--- a/SkillsTrackerAPI/SkillsTrackerAPI.Tests/App.config
+++ b/SkillsTrackerAPI/SkillsTrackerAPI.Tests/App.config
@@ -10,7 +10,7 @@
   </configSections>
   <appSettings></appSettings>
   <connectionStrings>
-    <add name="SkillTrackerDBEntities" connectionString="metadata=res://*/SkillTrackerDB.csdl|res://*/SkillTrackerDB.ssdl|res://*/SkillTrackerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fsd.database.windows.net;initial catalog=SkillTrackerDB;persist security info=True;user id=fsd_sa;password=pass@word1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SkillTrackerDBEntities" connectionString="metadata=res://*/SkillTrackerDB.csdl|res://*/SkillTrackerDB.ssdl|res://*/SkillTrackerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fsd-sba.database.windows.net;initial catalog=SkillTrackerDB;persist security info=True;user id=fsd_sa;password=pass@word1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
