--- a/SkillsTrackerAPI/SkillsTrackerAPI/Web.config
+++ b/SkillsTrackerAPI/SkillsTrackerAPI/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="SkillTrackerDBEntities" connectionString="metadata=res://*/SkillTrackerDB.csdl|res://*/SkillTrackerDB.ssdl|res://*/SkillTrackerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FSD;initial catalog=SkillTrackerDB;persist security info=True;user id=sa;password=pass@word1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SkillTrackerDBEntities" connectionString="metadata=res://*/SkillTrackerDB.csdl|res://*/SkillTrackerDB.ssdl|res://*/SkillTrackerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fsd-sba.database.windows.net;initial catalog=SkillTrackerDB;persist security info=True;user id=fsd_sa;password=pass@word1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="owin:AutomaticAppStartup" value="false" />
