--- a/SkillsTrackerAPI/SkillsTrackerAPI/bin/SkillsTrackerAPI.dll.config
+++ b/SkillsTrackerAPI/SkillsTrackerAPI/bin/SkillsTrackerAPI.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="SkillTrackerDBEntities" connectionString="metadata=res://*/SkillTrackerDB.csdl|res://*/SkillTrackerDB.ssdl|res://*/SkillTrackerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FSD;initial catalog=SkillTrackerDB;persist security info=True;user id=sa;password=pass@word1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SkillTrackerDBEntities" connectionString="metadata=res://*/SkillTrackerDB.csdl|res://*/SkillTrackerDB.ssdl|res://*/SkillTrackerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fsd-sba.database.windows.net;initial catalog=SkillTrackerDB;persist security info=True;user id=fsd_sa;password=pass@word1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="owin:AutomaticAppStartup" value="false" />
@@ -41,13 +41,13 @@
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <httpErrors existingResponse="PassThrough" />
+    <httpErrors errorMode="Detailed" />
+    <asp scriptErrorSentToBrowser="true"/>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
