--- a/SkillsTrackerAPI/SkillsTrackerAPI/SkillsTrackerAPI.csproj
+++ b/SkillsTrackerAPI/SkillsTrackerAPI/SkillsTrackerAPI.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+	<Content Include="Images\**" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Web.config">
